--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.4",
+    "framer-motion": "^4.1.17",
     "jwt-decode": "^3.1.2",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
-    "react-modal": "^3.14.4",
     "react-query": "^3.32.1",
     "react-router-dom": "^6.0.1",
     "react-scripts": "4.0.3",
